src/main/gen/com/github/dinbtechit/firebase/language/parser/RulesParser.java
// This is a generated file. Not intended for manual editing.
package com.github.dinbtechit.firebase.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.dinbtechit.firebase.psi.FirestoreRulesTypes.*;
import static com.github.dinbtechit.firebase.language.parser.RulesParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RulesParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return ruleFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // "+" | "-"
  public static boolean add_op(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "add_op")) return false;
    if (!nextTokenIs(builder_, "<add op>", MINUS, PLUS)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADD_OP, "<add op>");
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // ALLOW permissions allowConditionOrSemi
  public static boolean allowBlock(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "allowBlock")) return false;
    if (!nextTokenIs(builder_, ALLOW)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALLOW_BLOCK, null);
    result_ = consumeToken(builder_, ALLOW);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, permissions(builder_, level_ + 1));
    result_ = pinned_ && allowConditionOrSemi(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // allowIfStmt | SEMICOLON
  static boolean allowConditionOrSemi(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "allowConditionOrSemi")) return false;
    if (!nextTokenIs(builder_, "", COLON, SEMICOLON)) return false;
    boolean result_;
    result_ = allowIfStmt(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, SEMICOLON);
    return result_;
  }

  /* ********************************************************** */
  // ifLogic | ifLogicWithBrackets
  public static boolean allowIfCondition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "allowIfCondition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALLOW_IF_CONDITION, "<allow if condition>");
    result_ = ifLogic(builder_, level_ + 1);
    if (!result_) result_ = ifLogicWithBrackets(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // COLON IF allowIfCondition SEMICOLON
  public static boolean allowIfStmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "allowIfStmt")) return false;
    if (!nextTokenIs(builder_, COLON)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALLOW_IF_STMT, null);
    result_ = consumeTokens(builder_, 1, COLON, IF);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, allowIfCondition(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, SEMICOLON) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // term (add_op term)*
  public static boolean arithmeticExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmeticExpression")) return false;
    if (!nextTokenIs(builder_, "<arithmetic expression>", L_PAREN, NUMBER_LITERAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARITHMETIC_EXPRESSION, "<arithmetic expression>");
    result_ = term(builder_, level_ + 1);
    result_ = result_ && arithmeticExpression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (add_op term)*
  private static boolean arithmeticExpression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmeticExpression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!arithmeticExpression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "arithmeticExpression_1", pos_)) break;
    }
    return true;
  }

  // add_op term
  private static boolean arithmeticExpression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmeticExpression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = add_op(builder_, level_ + 1);
    result_ = result_ && term(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // BLOCK_COMMENT
  public static boolean blockCommentRule(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockCommentRule")) return false;
    if (!nextTokenIs(builder_, BLOCK_COMMENT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, BLOCK_COMMENT);
    exit_section_(builder_, marker_, BLOCK_COMMENT_RULE, result_);
    return result_;
  }

  /* ********************************************************** */
  // BOOL_LITERAL
  public static boolean booleanExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "booleanExpression")) return false;
    if (!nextTokenIs(builder_, BOOL_LITERAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, BOOL_LITERAL);
    exit_section_(builder_, marker_, BOOLEAN_EXPRESSION, result_);
    return result_;
  }

  /* ********************************************************** */
  // LINE_COMMENT|blockCommentRule
  public static boolean commentRule(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "commentRule")) return false;
    if (!nextTokenIs(builder_, "<comment rule>", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, COMMENT_RULE, "<comment rule>");
    result_ = consumeToken(builder_, LINE_COMMENT);
    if (!result_) result_ = blockCommentRule(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // ternaryExpression
  //                         | logicalExpression
  //                         | arithmeticExpression
  //                         | booleanExpression
  public static boolean expressionWrapper(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "expressionWrapper")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, EXPRESSION_WRAPPER, "<expression wrapper>");
    result_ = ternaryExpression(builder_, level_ + 1);
    if (!result_) result_ = logicalExpression(builder_, level_ + 1);
    if (!result_) result_ = arithmeticExpression(builder_, level_ + 1);
    if (!result_) result_ = booleanExpression(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // expressionWrapper SEMICOLON
  public static boolean expressionWrapperWithSemi(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "expressionWrapperWithSemi")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, EXPRESSION_WRAPPER_WITH_SEMI, "<expression wrapper with semi>");
    result_ = expressionWrapper(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, SEMICOLON);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // NUMBER_LITERAL | "(" arithmeticExpression ")"
  public static boolean factor(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "factor")) return false;
    if (!nextTokenIs(builder_, "<factor>", L_PAREN, NUMBER_LITERAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FACTOR, "<factor>");
    result_ = consumeToken(builder_, NUMBER_LITERAL);
    if (!result_) result_ = factor_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // "(" arithmeticExpression ")"
  private static boolean factor_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "factor_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, L_PAREN);
    result_ = result_ && arithmeticExpression(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, R_PAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // BOOL_LITERAL | STRING_LITERAL | NULL_LITERAL | NUMBER_LITERAL | expressionWrapper | jsonObject | jsonArray | functionCallStmt | object | variableName
  public static boolean functionArgument(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionArgument")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_ARGUMENT, "<function argument>");
    result_ = consumeToken(builder_, BOOL_LITERAL);
    if (!result_) result_ = consumeToken(builder_, STRING_LITERAL);
    if (!result_) result_ = consumeToken(builder_, NULL_LITERAL);
    if (!result_) result_ = consumeToken(builder_, NUMBER_LITERAL);
    if (!result_) result_ = expressionWrapper(builder_, level_ + 1);
    if (!result_) result_ = jsonObject(builder_, level_ + 1);
    if (!result_) result_ = jsonArray(builder_, level_ + 1);
    if (!result_) result_ = functionCallStmt(builder_, level_ + 1);
    if (!result_) result_ = object(builder_, level_ + 1);
    if (!result_) result_ = variableName(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // functionArgument (',' functionArgument)*
  public static boolean functionArgumentList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionArgumentList")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_ARGUMENT_LIST, "<function argument list>");
    result_ = functionArgument(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && functionArgumentList_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (',' functionArgument)*
  private static boolean functionArgumentList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionArgumentList_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!functionArgumentList_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "functionArgumentList_1", pos_)) break;
    }
    return true;
  }

  // ',' functionArgument
  private static boolean functionArgumentList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionArgumentList_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && functionArgument(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // FUNCTION functionName '(' functionParameterList? ')' functionBody
  public static boolean functionBlock(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBlock")) return false;
    if (!nextTokenIs(builder_, FUNCTION)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_BLOCK, null);
    result_ = consumeToken(builder_, FUNCTION);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, functionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, L_PAREN)) && result_;
    result_ = pinned_ && report_error_(builder_, functionBlock_3(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, R_PAREN)) && result_;
    result_ = pinned_ && functionBody(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // functionParameterList?
  private static boolean functionBlock_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBlock_3")) return false;
    functionParameterList(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' functionBodyElements* '}'
  public static boolean functionBody(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBody")) return false;
    if (!nextTokenIs(builder_, L_BRACE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_BODY, null);
    result_ = consumeToken(builder_, L_BRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, functionBody_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, R_BRACE) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // functionBodyElements*
  private static boolean functionBody_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBody_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!functionBodyElements(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "functionBody_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // commentRule
  //                                  | functionCallStmtWithSemi
  //                                  | variableDeclaration
  //                                  | variableAssignment
  //                                  | expressionWrapperWithSemi | returnStmt
  static boolean functionBodyElements(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBodyElements")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = commentRule(builder_, level_ + 1);
    if (!result_) result_ = functionCallStmtWithSemi(builder_, level_ + 1);
    if (!result_) result_ = variableDeclaration(builder_, level_ + 1);
    if (!result_) result_ = variableAssignment(builder_, level_ + 1);
    if (!result_) result_ = expressionWrapperWithSemi(builder_, level_ + 1);
    if (!result_) result_ = returnStmt(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, RulesParser::functionBodyRecover);
    return result_;
  }

  /* ********************************************************** */
  // !('}'|variableDeclaration | variableAssignment
  //                                      | expressionWrapperWithSemi
  //                                      | functionCallStmtWithSemi | returnStmt)
  static boolean functionBodyRecover(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBodyRecover")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !functionBodyRecover_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // '}'|variableDeclaration | variableAssignment
  //                                      | expressionWrapperWithSemi
  //                                      | functionCallStmtWithSemi | returnStmt
  private static boolean functionBodyRecover_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionBodyRecover_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, R_BRACE);
    if (!result_) result_ = variableDeclaration(builder_, level_ + 1);
    if (!result_) result_ = variableAssignment(builder_, level_ + 1);
    if (!result_) result_ = expressionWrapperWithSemi(builder_, level_ + 1);
    if (!result_) result_ = functionCallStmtWithSemi(builder_, level_ + 1);
    if (!result_) result_ = returnStmt(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // functionName '(' functionArgumentList? ')'
  public static boolean functionCall(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCall")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_CALL, "<function call>");
    result_ = functionName(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, L_PAREN);
    result_ = result_ && functionCall_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, R_PAREN);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // functionArgumentList?
  private static boolean functionCall_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCall_2")) return false;
    functionArgumentList(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // functionCall returnVariable?
  public static boolean functionCallStmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCallStmt")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_CALL_STMT, "<function call stmt>");
    result_ = functionCall(builder_, level_ + 1);
    result_ = result_ && functionCallStmt_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // returnVariable?
  private static boolean functionCallStmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCallStmt_1")) return false;
    returnVariable(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // !(')' | ';')
  static boolean functionCallStmtRecovery(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCallStmtRecovery")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !functionCallStmtRecovery_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ')' | ';'
  private static boolean functionCallStmtRecovery_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCallStmtRecovery_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, R_PAREN);
    if (!result_) result_ = consumeToken(builder_, SEMICOLON);
    return result_;
  }

  /* ********************************************************** */
  // functionCallStmt SEMICOLON
  public static boolean functionCallStmtWithSemi(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionCallStmtWithSemi")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_CALL_STMT_WITH_SEMI, "<function call stmt with semi>");
    result_ = functionCallStmt(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && consumeToken(builder_, SEMICOLON);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // 'get' | BIND | IDENTIFIER
  public static boolean functionName(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "functionName")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FUNCTION_NAME, "<function name>");
    result_ = consumeToken(builder_, GET);
    if (!result_) result_ = consumeToken(builder_, BIND);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }
